hard-gists/3834957/run.log
=== Docker Run Log for 3834957 ===
Started at: Mi 29. Okt 14:02:49 CET 2025

[2025-10-29 14:02:49] START: Running container for 3834957
[2025-10-29 14:02:50] SUCCESS: Container c42ccb321679a294b218b106f8b575b4b2651118f04f3f2ac9905ec9ba51d774 started for 3834957
=== Container logs for 3834957 ===
  File "/snippet.py", line 211
    print window.window.get_wm_class()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3834957 ===
[2025-10-29 14:02:52] INFO: Container c42ccb321679a294b218b106f8b575b4b2651118f04f3f2ac9905ec9ba51d774 has stopped
